@@ -6,6 +6,7 @@ Version 1.1.12 (released ??-???-????)
   * allow environmental override of configuration location (issue #494)
   * fix exception HTML-escaping non-string data under WSGI (issue #454)
   * add links to root logs from roots view (issue #470)
+  * use Pygments lexer-guessing functionality (issue #495)
 
 Version 1.1.11 (released 17-May-2011)
 
